--- a/src/saar_website/static/css/style.css
+++ b/src/saar_website/static/css/style.css
@@ -34,6 +34,7 @@
     right: 30px;
     bottom: 90px;
     display: flex;
+    border-radius: 10%;
     /* width: 200px;
     height: 50px; */
     align-items: center;
@@ -1530,6 +1531,9 @@ color: red;
     right: 0;
     z-index: 9999;
     background-color: white;
+    border-top-left-radius: 5%;
+    border-top-right-radius: 5%;
+
     
 }
 /* Limitation de la hauteur et de l'overflow pour le corps du chat */
@@ -1623,13 +1627,22 @@ color: red;
 } */
 
 #chatToggle {
-    background-color: var(--bs-primary) !important;
+    background-color: var(--bs-primary);
+    box-shadow: inset 0 0 0 0 var(--bs-primary) !important;
 
 }
 
 #chatToggle:hover {
-    box-shadow: inset 0 0 0 0 #fc0e0e;
-    color: #D6B033 !important;
+    /* box-shadow: inset 0 0 0 0 #fc0e0e; */
+    color: #FFF;
+    background-color: #fc0e0e;
+    border-color: #fc0e0e;
+}
+
+#chatToggle:focus {
+    color: #FFF;
+    background-color: #D6B033;
+    border-color: #D6B033;
 }
 
 
