--- a/src/saar_website/templates/saar_website/contact.html
+++ b/src/saar_website/templates/saar_website/contact.html
@@ -48,7 +48,7 @@
                         <div class="text-center">
                             {% comment %} <i class="fa fa-envelope-open fa-3x text-primary mb-3"></i> {% endcomment %}
                             <h4 class="text-primary">Nos agences</h4>
-                            <p class="mb-0"><a class="ms-3" href="{% url 'contact' %}">Cliquez ici</a>
+                            <p class="mb-0"><a class="ms-3" href="{% url 'agences' %}">Cliquez ici</a>
                             </p>
                             {% comment %} <p class="mb-0">info@example.com</p> {% endcomment %}
                         </div>
