--- a/src/saar_website/templates/saar_website/template_sinistre2.html
+++ b/src/saar_website/templates/saar_website/template_sinistre2.html
@@ -123,7 +123,7 @@
             <li><strong>Date de délivrance :</strong> {{date_delivrance_b|date:"d-m-Y"}}</li>
             <li><strong>Lieu de délivrance :</strong> {{lieu_delivrance_b}}</li>
             <li><strong>Catégorie du permis :</strong> {{categorie_b}}</li>
-            <li><strong>Durée de validité (en année) :</strong> {{dure_b}}</li>
+            <li><strong>Durée de validité (en année) :</strong> {{dure_b|default_if_none:""}}</li>
             <li><strong>Constat Amiable :</strong> {{constat_b}}</li>
             <li><strong>Est-il salarié de l'assuré :</strong> {{salarie_b}}</li>
         </ul>
